--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -4,6 +4,9 @@ $highlight-color: #f8d6e6; /* Lavender */
 $light-gray: #f9f9f9; /* Warm Light Beige */
 $dark-gray: #e9e0e0; /* Deep Charcoal Gray */
 $button-hover-color: #9c80a1;
+$background-color: #f9f9f9;
+$border-color: #ccc;
+$button-hover-color: #3f51b5;
 
 /* Base styles */
 body {
@@ -103,7 +106,8 @@ body {
   &.scrolled {
     background: rgba(228, 172, 216, 0.8);
   }
-  @media (max-width: 768px) {
+
+  @media (max-width: 1024px) {
     .nav-links {
       display: none;
       flex-direction: column;
@@ -121,15 +125,19 @@ body {
     }
   }
 }
+
 /* Hero Section */
 .hero {
   position: relative;
-  height: 100vh;
+  height: 70vh;
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
+  z-index: 1;
+  background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%);
+  color: #9c80a1;
 
   .hero-video {
     position: absolute;
@@ -140,142 +148,49 @@ body {
     height: 100%;
     object-fit: cover;
     z-index: -1;
-    filter: blur(8px); // Adding a blur effect to the video for focus on text
+    filter: blur(8px);
   }
 
-  .hero-overlay {
+  .floating-logos {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.4);
-    z-index: 1;
-    animation: gradientAnimation 15s ease infinite;
-  }
-
-  .hero-content {
-    color: white;
+    display: flex;
+    margin-right: 540px;
+    margin-top: 150px;
+    gap: 30rem; /* Space between logos */
     z-index: 2;
-    font-family: "Poppins", sans-serif;
-    opacity: 0;
-    transform: translateY(20px);
-    animation: fadeInUp 1.5s ease-out forwards;
-    width: 700px;
-    height: 400px;
-    background-color: #9c80a1;
-    border-radius: 20px;
-    box-shadow: 5px 10px 10px #af9ab3;
-    padding: 10px;
+    width: 90px;
+    height: 90px;
 
-    .header-title {
-      font-size: 4rem;
-      font-weight: bold;
-      font-family: komet;
-      text-transform: uppercase;
-      margin-bottom: 1rem;
-      animation: scaleIn 1s ease-out forwards;
-
-      .highlight {
-        color: $highlight-color;
-      }
+    .logo-iu,
+    .logo-yonsei {
+      animation: float 6s ease-in-out infinite;
     }
 
-    .header-subtitle {
-      font-size: 1.5rem;
-      margin-bottom: 2rem;
-      font-family: komet;
-      font-weight: 400;
-      animation: fadeInUp 2s ease-out forwards;
+    .logo-iu {
+      animation-delay: 0s;
     }
 
-    .hero-buttons {
-      display: flex;
-      gap: 1.5rem;
-      justify-content: center;
-      opacity: 0;
-      transform: translateY(20px);
-      animation: fadeInUp 2s ease-out forwards 0.5s; // Animation delay for buttons
-
-      .btn {
-        padding: 1rem 2rem;
-        font-size: 1.1rem;
-        font-weight: 400;
-        border: 2px solid $highlight-color;
-        color: $highlight-color;
-        background: transparent;
-        text-decoration: none;
-        cursor: pointer;
-        border-radius: 20px;
-        transition: background 0.3s, color 0.3s, transform 0.3s;
-
-        &.btn-primary:hover {
-          background: rgba(255, 255, 255, 0.2);
-          color: white;
-          transform: scale(1.1);
-        }
-
-        &.btn-secondary:hover {
-          background: rgba(255, 255, 255, 0.2);
-          color: white;
-          transform: scale(1.05);
-        }
-      }
+    .logo-yonsei {
+      animation-delay: 2s;
     }
-  }
-
-  /* Blurry line effect between Hero and About sections */
-  &::after {
-    content: "";
-    position: absolute;
-    bottom: -50px; /* Position the blurry line below the hero */
-    left: 0;
-    width: 100%;
-    height: 50px;
-    background: rgba(255, 255, 255, 0.5);
-    filter: blur(20px);
-    z-index: 1;
   }
 }
 
-// Keyframe Animations
-@keyframes fadeInUp {
+@keyframes float {
   0% {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@keyframes scaleIn {
-  0% {
-    opacity: 0;
-    transform: scale(0.8);
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
-@keyframes gradientAnimation {
-  0% {
-    background: rgba(209, 169, 242, 0.7);
+    transform: translateY(0) rotate(0deg);
   }
   25% {
-    background: rgba(246, 207, 129, 0.7);
+    transform: translateY(-20px) rotate(5deg);
   }
   50% {
-    background: rgba(182, 211, 243, 0.7);
+    transform: translateY(0) rotate(10deg);
   }
   75% {
-    background: rgba(182, 65, 119, 0.7);
+    transform: translateY(20px) rotate(5deg);
   }
   100% {
-    background: rgba(192, 253, 222, 0.7);
+    transform: translateY(0) rotate(0deg);
   }
 }
 
@@ -308,8 +223,22 @@ body {
     flex: 1;
     border-radius: 15px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    width: 750px;
+    height: 500px;
+    margin: 0 auto;
+  }
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    padding: 2rem 0;
+
+    .about-image {
+      width: 100%;
+      margin-top: 1rem;
+    }
   }
 }
+
 /* Projects Section */
 .projects-section {
   padding: 4rem 2rem;
@@ -317,7 +246,7 @@ body {
 
   .project-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: 2rem;
 
     .project-card {
@@ -349,6 +278,56 @@ body {
           color: $dark-gray;
         }
       }
+    }
+  }
+
+  @media (max-width: 768px) {
+    padding: 3rem 1rem;
+    .project-grid {
+      grid-template-columns: 1fr;
+      gap: 1.5rem;
+    }
+  }
+}
+
+/* Contact Section */
+.contact-section {
+  padding: 2rem;
+  background-color: #f9f9f9;
+  text-align: center;
+
+  .email-button {
+    display: inline-block;
+    text-decoration: none;
+    margin-top: 1.5rem;
+
+    button {
+      background-color: #4caf50;
+      color: white;
+      font-size: 1rem;
+      font-weight: bold;
+      padding: 0.75rem 2rem;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+
+      &:hover {
+        background-color: #45a049;
+        transform: translateY(-3px);
+      }
+
+      &:active {
+        background-color: #388e3c;
+        transform: translateY(1px);
+      }
+    }
+  }
+
+  @media (max-width: 768px) {
+    .email-button button {
+      width: 100%;
+      padding: 0.75rem 1.5rem;
     }
   }
 }
@@ -409,89 +388,17 @@ body {
     margin-top: 2rem;
     font-size: 0.9rem;
   }
-}
-@media (max-width: 768px) {
-  /* Navbar */
-  .navbar {
-    flex-direction: column;
-    padding: 1rem;
 
-    .nav-links {
-      display: none; // Hide nav-links by default on small screens
+  @media (max-width: 768px) {
+    .footer-grid {
+      flex-direction: column;
+      text-align: center;
     }
 
-    .menu-toggle {
-      display: flex;
-    }
-  }
-
-  /* Hero Section */
-  .hero {
-    height: 80vh; // Adjust the height for mobile screens
-
-    .hero-content {
-      width: 90%;
-      height: auto;
-      padding: 1rem;
-      font-size: 1.2rem; // Adjust text size for smaller devices
-    }
-
-    .hero-video {
-      filter: blur(5px); // Reduce the blur effect for performance
-    }
-  }
-
-  .hero-buttons {
-    flex-direction: column;
-    gap: 1rem;
-
-    .btn {
-      padding: 0.8rem 1.5rem;
-      font-size: 1rem;
-    }
-  }
-
-  .section-title {
-    font-size: 2rem;
-  }
-
-  /* About Section */
-  .about-section {
-    flex-direction: column;
-    padding: 2rem 0;
-
-    .about-content {
-      padding: 1rem;
-      p {
-        font-size: 1rem; // Adjust text size for better readability
-      }
-    }
-
-    .about-image {
-      width: 100%;
+    .footer-links {
+      flex-direction: column;
       margin-top: 1rem;
     }
-  }
-
-  /* Projects Section */
-  .projects-section {
-    padding: 3rem 1rem;
-    .project-grid {
-      grid-template-columns: 1fr;
-      gap: 1.5rem;
-    }
-  }
-
-  /* Footer */
-  .footer .footer-grid {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .footer .footer-links {
-    flex-direction: column;
-    margin-top: 1rem;
   }
 }
 
@@ -500,7 +407,7 @@ body {
   /* Navbar */
   .navbar {
     .logo {
-      font-size: 1.5rem; // Adjust logo size for small screens
+      font-size: 1.5rem;
     }
 
     .menu-toggle {
@@ -514,24 +421,14 @@ body {
 
   /* Hero Section */
   .hero {
-    height: 60vh; // Adjust height further for small devices
-
+    height: 60vh;
     .hero-content {
       width: 95%;
       padding: 1rem;
       font-size: 1rem;
-
-      .header-title {
-        font-size: 2rem;
-      }
-      .header-subtitle {
-        font-size: 1.2rem;
-      }
     }
-
     .hero-buttons {
       gap: 0.8rem;
-
       .btn {
         padding: 0.8rem 1.2rem;
         font-size: 0.9rem;
@@ -542,10 +439,6 @@ body {
   /* About Section */
   .about-section {
     padding: 1.5rem 0;
-    .about-content {
-      padding: 1rem;
-    }
-
     .about-image {
       width: 100%;
       margin-top: 1rem;
