--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -129,13 +129,14 @@ body {
 /* Hero Section */
 .hero {
   position: relative;
-  height: 70vh;
+  height: 35vh;
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   z-index: 1;
+  padding-bottom: 70px;
   background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%);
   color: #9c80a1;
 
@@ -268,6 +269,7 @@ body {
 
       .project-details {
         padding: 1rem;
+        width: 400px;
 
         h3 {
           margin-bottom: 0.5rem;
@@ -295,7 +297,10 @@ body {
   padding: 2rem;
   background-color: #f9f9f9;
   text-align: center;
-
+  margin-top: 50px;
+  p {
+    color: #9c80a1;
+  }
   .email-button {
     display: inline-block;
     text-decoration: none;
@@ -337,6 +342,7 @@ body {
   background: $primary-color;
   color: white;
   padding: 2rem 0;
+  margin-top: 100px;
 
   .footer-grid {
     display: flex;
