--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -43,6 +43,7 @@ body {
     text-transform: uppercase;
     color: white;
     letter-spacing: 1px;
+    text-decoration: none;
 
     .logo-highlight {
       color: $highlight-color;
