--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,10 +7,6 @@
 html,
 body {
   height: 100%;
-  font-family: komet;
-  line-height: 1.6;
-  margin: 0;
-  padding: 0;
 }
 
 h1,
@@ -24,16 +20,12 @@ p {
 }
 
 /* Dusty Blue */
-/* Lavender */
-/* Warm Light Beige */
-/* Deep Charcoal Gray */
 /* Base styles */
 body {
   margin: 0;
   font-family: komet;
   background-color: #f9f9f9;
   color: #e9e0e0;
-  line-height: 1.6;
 }
 
 .container {
@@ -48,44 +40,44 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 1.2rem 0;
-  background: #9d81a5;
+  background-color: #a0937d;
   color: white;
-  position: sticky;
-  top: 0;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 1000;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s ease;
-  /* Desktop menu links */
-  /* Mobile menu toggle */
+  width: 80%;
+  margin-top: 40px;
+  height: 50px;
+  border-radius: 20px;
+  box-shadow: 0 0 15px rgba(227, 244, 216, 0.5019607843); /* Optional glow effect */
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 .navbar .logo {
-  font-size: 1.8rem;
+  font-size: 1rem;
   font-weight: bold;
   text-transform: uppercase;
   color: white;
   letter-spacing: 1px;
   text-decoration: none;
-}
-.navbar .logo .logo-highlight {
-  color: #f8d6e6;
+  padding: 10px;
 }
 .navbar .nav-links {
   list-style: none;
   display: flex;
+  gap: 1.5rem;
 }
 .navbar .nav-links li {
   margin: 0 1.5rem;
-  position: relative;
 }
 .navbar .nav-links li a {
   text-decoration: none;
   color: white;
   font-size: 1rem;
   padding: 0.5rem 0;
-  position: relative;
 }
 .navbar .nav-links li a:hover {
-  color: #f8d6e6;
+  color: #d1dbbd;
 }
 .navbar .nav-links li a::after {
   content: "";
@@ -94,7 +86,7 @@ body {
   left: 0;
   width: 0;
   height: 2px;
-  background: #f8d6e6;
+  background: #d1dbbd;
   transition: width 0.3s ease;
 }
 .navbar .nav-links li a:hover::after {
@@ -112,9 +104,6 @@ body {
   background: white;
   border-radius: 5px;
   transition: all 0.3s ease;
-}
-.navbar.scrolled {
-  background: rgba(228, 172, 216, 0.8);
 }
 @media (max-width: 1024px) {
   .navbar .nav-links {
@@ -135,7 +124,7 @@ body {
 /* Hero Section */
 .hero {
   position: relative;
-  height: 35vh;
+  height: 70vh;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -143,26 +132,21 @@ body {
   text-align: center;
   z-index: 1;
   padding-bottom: 70px;
-  background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%);
-  color: #9c80a1;
+  background-image: linear-gradient(to top, #d1dbbd 0%, #f2d5c4 100%);
+  color: #91a687;
 }
-.hero .hero-video {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
-  filter: blur(8px);
+.hero .header-title {
+  font-size: 70px;
+}
+.hero .header-subtitle {
+  font-size: 20px;
 }
 .hero .floating-logos {
   position: absolute;
   display: flex;
-  margin-right: 540px;
+  margin-right: 700px;
   margin-top: 150px;
-  gap: 30rem; /* Space between logos */
+  gap: 40rem;
   z-index: 2;
   width: 90px;
   height: 90px;
@@ -195,15 +179,341 @@ body {
     transform: translateY(0) rotate(0deg);
   }
 }
-/* Section Titles */
-.section-title {
-  text-align: center;
-  font-size: 2.5rem;
-  color: #9d81a5;
-  margin-bottom: 1rem;
+.saying {
+  width: 100%;
+  height: 300px;
+  background-color: #735439;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  color: #f2d5c4;
+}
+.saying h2 {
+  width: 60%;
 }
 
-/* Projects Section */
+/* Food Section */
+.section3 {
+  display: flex;
+}
+.section3 .descBox1 {
+  width: 60%;
+  height: 600px;
+  background-color: #f2d5c4;
+  display: flex;
+}
+.section3 .descBox1 p {
+  display: flex;
+  justify-content: center;
+  padding-top: 90px;
+  margin: 0 auto;
+  color: #735439;
+  font-size: 18px;
+  width: 60%;
+  line-height: 30px;
+}
+.section3 .farm {
+  background-image: url(../images/farm.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 900px;
+  height: 600px;
+}
+
+.section4 {
+  display: flex;
+}
+.section4 .descBox1 {
+  width: 60%;
+  height: 600px;
+  background-color: #91a687;
+  display: flex;
+}
+.section4 .descBox1 p {
+  display: flex;
+  justify-content: center;
+  padding-top: 50px;
+  margin: 0 auto;
+  color: #f2d5c4;
+  font-size: 16px;
+  width: 60%;
+  line-height: 30px;
+}
+.section4 .farm {
+  background-image: url(../images/collab.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 900px;
+  height: 600px;
+}
+
+.section5 {
+  width: 100%;
+  height: 600px;
+  background-color: #735439;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  /* Individual image backgrounds */
+}
+.section5 .img-container {
+  position: relative;
+  width: 500px;
+  height: 400px;
+  border-radius: 30px;
+  overflow: hidden;
+  box-shadow: 10px 5px 5px rgba(242, 213, 196, 0.4);
+  transition: transform 0.5s ease-in-out;
+}
+.section5 .img-container:hover {
+  animation: wiggle 0.5s ease-in-out; /* Single wiggle animation */
+  transform: scale(1.05); /* Slight zoom effect */
+}
+.section5 .img-container .hover-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 20px;
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 30px;
+  opacity: 0; /* Initially hidden */
+  transition: opacity 0.5s ease-in-out;
+}
+.section5 .img-container:hover .hover-text {
+  opacity: 1; /* Show text overlay on hover */
+}
+.section5 .img1 {
+  background-image: url(../images/img1.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+.section5 .img2 {
+  background-image: url(../images/img2.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+.section5 .img3 {
+  background-image: url(../images/img3.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+@keyframes wiggle {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(5deg);
+  }
+  50% {
+    transform: rotate(-5deg);
+  }
+  75% {
+    transform: rotate(3deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+/* Footer */
+.footer {
+  background: #d1dbbd;
+  color: white;
+  padding: 2rem 0;
+}
+.footer .footer-grid {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer .footer-grid .footer-logo h3 {
+  margin: 0;
+}
+.footer .footer-grid .footer-logo h3 .logo-highlight {
+  color: #d1dbbd;
+}
+.footer .footer-grid .footer-links {
+  list-style: none;
+  display: flex;
+}
+.footer .footer-grid .footer-links li {
+  margin: 0 1rem;
+}
+.footer .footer-grid .footer-links li a {
+  text-decoration: none;
+  color: white;
+}
+.footer .footer-grid .footer-links li a:hover {
+  color: #d1dbbd;
+}
+.footer .footer-grid .footer-social a {
+  color: white;
+  margin: 0 0.5rem;
+}
+.footer .footer-grid .footer-social a:hover {
+  color: #d1dbbd;
+}
+.footer .footer-bottom {
+  text-align: center;
+  margin-top: 2rem;
+  font-size: 14px;
+}
+
+/* Global Animations */
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@media (max-width: 768px) {
+  .hero {
+    height: 45vh;
+    padding-bottom: 30px;
+  }
+  .hero .header-title {
+    font-size: 30px;
+  }
+  .hero .header-subtitle {
+    font-size: 14px;
+  }
+  .hero .floating-logos {
+    gap: 350px;
+    margin-right: 400px;
+  }
+  .saying h2 {
+    width: 90%;
+    font-size: 16px;
+  }
+  .section3,
+  .section4 {
+    flex-direction: column;
+  }
+  .section3 .descBox1,
+  .section4 .descBox1 {
+    width: 100%;
+    height: auto;
+    padding: 20px;
+    text-align: center;
+  }
+  .section3 .farm,
+  .section4 .farm {
+    width: 100%;
+    height: 350px;
+    background-size: cover;
+  }
+  /* Section 5 */
+  .section5 {
+    flex-direction: column;
+  }
+  .section5 .img-container {
+    width: 80%;
+    height: 100%;
+    margin: 25px;
+  }
+  /* Footer */
+  .footer .footer-grid {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer .footer-links {
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+  }
+  .footer .footer-social {
+    justify-content: center;
+    margin-top: 10px;
+  }
+}
+/* Small devices */
+@media (max-width: 480px) {
+  /* Hero Section */
+  .hero {
+    height: 40vh;
+  }
+  .hero .header-title {
+    font-size: 24px;
+  }
+  .hero .header-subtitle {
+    font-size: 12px;
+  }
+  .hero .floating-logos {
+    gap: 250px;
+    margin-right: 300px;
+    width: 60px;
+    height: 60px;
+  }
+  /* Navbar */
+  .navbar .logo {
+    font-size: 0.9rem;
+  }
+  .saying h2 {
+    width: 90%;
+    font-size: 14px;
+  }
+  /* Food Section */
+  .section3 .section4 {
+    flex-direction: column;
+  }
+  .section3 .section4 .descBox1 {
+    width: 100%;
+    height: 1000px;
+    padding: 3px;
+  }
+  .section3 .section4 .farm {
+    width: 100%;
+    height: 300px;
+    background-size: cover;
+  }
+  /* Section 5 */
+  .section5 {
+    flex-direction: column;
+    height: 100%;
+  }
+  .section5 .img-container {
+    width: 60%;
+    height: 250px;
+    margin: 25px;
+  }
+  /* Footer */
+  .footer .footer-grid {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer .footer-links {
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+  }
+  .footer .footer-social {
+    justify-content: center;
+    margin-top: 10px;
+  }
+}
+/* Dusty Blue */
 .projects-section {
   padding: 4rem 2rem;
   margin-bottom: 100px;
@@ -249,145 +559,6 @@ body {
   }
 }
 
-/* Contact Section */
-.contact-section {
-  padding: 2rem;
-  background-color: #f9f9f9;
-  text-align: center;
-  margin-top: 50px;
-}
-.contact-section p {
-  color: #9c80a1;
-}
-.contact-section .email-button {
-  display: inline-block;
-  text-decoration: none;
-  margin-top: 1.5rem;
-}
-.contact-section .email-button button {
-  background-color: #4caf50;
-  color: white;
-  font-size: 1rem;
-  font-weight: bold;
-  padding: 0.75rem 2rem;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.3s ease;
-}
-.contact-section .email-button button:hover {
-  background-color: #45a049;
-  transform: translateY(-3px);
-}
-.contact-section .email-button button:active {
-  background-color: #388e3c;
-  transform: translateY(1px);
-}
-@media (max-width: 768px) {
-  .contact-section .email-button button {
-    width: 100%;
-    padding: 0.75rem 1.5rem;
-  }
-}
-
-/* Footer */
-.footer {
-  background: #9d81a5;
-  color: white;
-  padding: 2rem 0;
-  margin-top: 100px;
-}
-.footer .footer-grid {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.footer .footer-grid .footer-logo h3 {
-  margin: 0;
-}
-.footer .footer-grid .footer-logo h3 .logo-highlight {
-  color: #f8d6e6;
-}
-.footer .footer-grid .footer-links {
-  list-style: none;
-  display: flex;
-}
-.footer .footer-grid .footer-links li {
-  margin: 0 1rem;
-}
-.footer .footer-grid .footer-links li a {
-  text-decoration: none;
-  color: white;
-}
-.footer .footer-grid .footer-links li a:hover {
-  color: #f8d6e6;
-}
-.footer .footer-grid .footer-social a {
-  color: white;
-  margin: 0 0.5rem;
-}
-.footer .footer-grid .footer-social a:hover {
-  color: #f8d6e6;
-}
-.footer .footer-bottom {
-  text-align: center;
-  margin-top: 2rem;
-  font-size: 0.9rem;
-}
-@media (max-width: 768px) {
-  .footer .footer-grid {
-    flex-direction: column;
-    text-align: center;
-  }
-  .footer .footer-links {
-    flex-direction: column;
-    margin-top: 1rem;
-  }
-}
-
-/* Mobile Devices (Portrait) */
-@media (max-width: 480px) {
-  /* Navbar */
-  .navbar .logo {
-    font-size: 1.5rem;
-  }
-  .navbar .menu-toggle {
-    display: flex;
-  }
-  .navbar .menu-toggle .bar {
-    width: 25px;
-    height: 2px;
-  }
-  /* Hero Section */
-  .hero {
-    height: 60vh;
-  }
-  .hero .hero-content {
-    width: 95%;
-    padding: 1rem;
-    font-size: 1rem;
-  }
-  .hero .hero-buttons {
-    gap: 0.8rem;
-  }
-  .hero .hero-buttons .btn {
-    padding: 0.8rem 1.2rem;
-    font-size: 0.9rem;
-  }
-  /* About Section */
-  .about-section {
-    padding: 1.5rem 0;
-  }
-  .about-section .about-image {
-    width: 100%;
-    margin-top: 1rem;
-  }
-  /* Footer */
-  .footer .footer-grid {
-    flex-direction: column;
-    text-align: center;
-  }
-}
 #project-details {
   display: none;
   padding: 2rem;
@@ -465,69 +636,222 @@ body {
   background-color: #d62839;
 }
 
-/* Map Container */
-.map-container {
-  width: 100%;
-  max-width: 800px;
-  height: 500px;
-  margin: 2rem auto;
-  position: relative;
+@font-face {
+  font-family: anni;
+  src: url(../fonts/AnisetteBlack.otf);
 }
-
-#map {
-  width: 100%;
-  height: 100%;
-}
-
-/* About Section */
-.about-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 4rem 0;
-}
-.about-section .about-content {
-  flex: 1;
-  padding: 1rem;
-}
-.about-section .about-content p {
-  line-height: 1.8;
-  color: #9c80a1;
-  font-size: 1.2rem;
-}
-.about-section .about-image {
-  width: 80%;
-  border-radius: 15px;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  margin-top: 2rem;
-}
-@media (max-width: 768px) {
-  .about-section .about-image {
-    width: 100%;
-  }
-}
-
-/* Typography Animation */
-.animated-text {
-  display: inline-block;
-  font-size: 1.2rem;
-  font-weight: 300;
-  letter-spacing: 0.05rem;
-  line-height: 1.8;
-}
-
-.animated-text .letter {
-  display: inline-block;
-  opacity: 0;
-  animation: fadeIn 0.5s forwards;
-}
-
 @keyframes fadeIn {
-  to {
+  0% {
+    opacity: 0;
+  }
+  100% {
     opacity: 1;
   }
 }
-/* Mobile Menu */
-.navbar .nav-links.open {
+@keyframes slideUp {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+  max-width: 1200px;
+}
+.container .wrap {
   display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  margin-top: 30px;
+  overflow: hidden;
+}
+.container .wrap .line {
+  width: 100vw;
+}
+.container .wrap .left,
+.container .wrap .right {
+  width: 80vw;
+  overflow: hidden;
+  display: inline-block;
+}
+.container .wrap .left {
+  color: rgb(179, 162, 135);
+  transform: skew(0deg, -5deg);
+}
+.container .wrap .right {
+  color: black;
+  transform: skew(0deg, -5deg);
+}
+.container .wrap .left .content {
+  width: 100vw;
+  text-align: center;
+  border: 2px solid black;
+}
+.container .wrap .right .content {
+  width: 100vw;
+  text-align: center;
+  transform: translate(-30vw);
+}
+.container .wrap span {
+  display: inline-block;
+  font-family: monospace;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 9vw;
+  text-transform: uppercase;
+  line-height: 0.8;
+  transition: ease-out 0.6s;
+  font-weight: bold;
+  text-shadow: rgb(255, 224, 180) 5px 0 20px;
+}
+
+.about-section {
+  padding: 60px 0;
+  background-image: linear-gradient(to top, #f6e6cb 0%, #b6c7aa 100%);
+  animation: fadeIn 1.5s ease-out;
+}
+.about-section .section-title {
+  margin-top: 100px;
+  font-size: 2.5rem;
+  font-family: "Lora", serif;
+  text-align: center;
+  color: #000000;
+  margin-bottom: 30px;
+  transition: color 0.3s ease;
+  animation: slideUp 1.2s ease-out;
+}
+.about-section .section-title:hover {
+  color: #9f9a7f;
+}
+.about-section .about-content {
+  padding: 20px;
+  justify-content: space-between;
+  gap: 20px;
+  margin-top: 20px;
+  align-items: center;
+  color: black;
+  border-radius: 20px;
+  background-color: rgb(255, 245, 217);
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  opacity: 0;
+  animation: fadeIn 1.5s ease-out 0.5s forwards;
+}
+.about-section .about-content .text-content {
+  flex: 1;
+  font-size: 1.1rem;
+  line-height: 1.6;
+  color: #000000;
+}
+.about-section .about-content .collab {
+  background-image: url(../images/about-collaboration.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 80%;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.about-section .about-content .collab:hover {
+  transform: scale(1.05);
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
+}
+
+.food-insecurity-section {
+  background: linear-gradient(180deg, #f6e6cb, #e7d4b5);
+  padding: 60px 0;
+  animation: fadeIn 2s ease-out;
+}
+.food-insecurity-section .section-title {
+  font-size: 2.5rem;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
+  color: #000000;
+  margin-bottom: 30px;
+  animation: slideUp 1.5s ease-out;
+}
+.food-insecurity-section p {
+  color: black;
+}
+.food-insecurity-section .map-container {
+  position: relative;
+  text-align: center;
+  opacity: 0;
+  animation: fadeIn 1.5s ease-out 1s forwards;
+}
+.food-insecurity-section .map-container #map {
+  height: 400px;
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+.food-insecurity-section .map-container #map:hover {
+  transform: scale(1.05);
+}
+.food-insecurity-section .map-container .map-instructions {
+  font-size: 1rem;
+  margin-top: 20px;
+  color: #807092;
+  transition: color 0.3s ease;
+}
+.food-insecurity-section .map-container .map-instructions:hover {
+  color: #000000;
+}
+
+.animated-typography {
+  background: linear-gradient(135deg, #a0937d, #f6e6cb);
+  color: #807092;
+  padding: 50px 0;
+  text-align: center;
+}
+.animated-typography .typography-title {
+  font-size: 2.5rem;
+  font-family: "Lora", serif;
+  margin-bottom: 20px;
+  animation: slideUp 1.5s ease-out;
+  transition: color 0.3s ease;
+}
+.animated-typography .typography-title:hover {
+  color: #807092;
+}
+.animated-typography .typography-description {
+  font-size: 1.2rem;
+  line-height: 1.6;
+  animation: slideUp 2s ease-out 0.5s;
+  margin-bottom: 30px;
+}
+.animated-typography .typography-description h2 {
+  font-size: 2rem;
+  margin-top: 20px;
+  margin-bottom: 15px;
+  font-family: "Lora", serif;
+}
+.animated-typography .typography-description p {
+  color: #807092;
+}
+
+@media (max-width: 768px) {
+  .about-content {
+    flex-direction: column;
+    align-items: center;
+  }
+  .about-content .text-content {
+    margin-bottom: 20px;
+  }
+  .map-container {
+    padding: 20px;
+  }
 }
