--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -122,7 +122,7 @@ body {
 }
 
 /* Hero Section */
-.hero {
+.hero1 {
   position: relative;
   height: 70vh;
   overflow: hidden;
@@ -355,7 +355,7 @@ body {
 
 /* Footer */
 .footer {
-  background: #d1dbbd;
+  background: #735439;
   color: white;
   padding: 2rem 0;
 
