--- a/assets/scss/projects.scss
+++ b/assets/scss/projects.scss
@@ -1,149 +1,302 @@
-$primary-color: #9d81a5;
-$secondary-color: #c6d7d7; /* Dusty Blue */
-$highlight-color: #d1dbbd;
-$light-gray: #f9f9f9;
-$dark-gray: #e9e0e0;
-$button-hover-color: #9c80a1;
-$background-color: #f9f9f9;
-$border-color: #ccc;
-$button-hover-color: #b6f2ae;
-.projects-section {
-  padding: 4rem 2rem;
-  margin-bottom: 100px;
+@import url("https://fonts.googleapis.com/css?family=Eczar:400,700|Gentium+Basic");
 
-  .project-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    gap: 2rem;
+.group {
+  overflow: hidden;
+}
 
-    .project-card {
-      background: #af9ab3;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s;
+.pull {
+  float: left;
+}
 
-      &:hover {
-        transform: scale(1.05);
-      }
+.push {
+  float: right;
+}
 
-      .project-image {
-        width: 100%;
-        height: 200px;
-        object-fit: cover;
-      }
+.hero {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100vh;
 
-      .project-details {
-        padding: 1rem;
-        width: 400px;
+  &__image {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    clip: rect(0, auto, auto, 0);
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/d/dc/Indianapolis-indiana-from-above.jpg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
 
-        h3 {
-          margin-bottom: 0.5rem;
-          color: white;
-        }
+    &--overlay {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 1;
 
-        p {
-          color: $dark-gray;
-        }
-      }
+      background: linear-gradient(
+        to bottom,
+        rgba(121, 85, 72, 0) 0%,
+        rgba(121, 85, 72, 0.17) 21%,
+        rgba(121, 85, 72, 0.5) 80%
+      );
     }
   }
+  &__child {
+    position: fixed;
 
-  @media (max-width: 768px) {
-    padding: 3rem 1rem;
-    .project-grid {
-      grid-template-columns: 1fr;
-      gap: 1.5rem;
+    background-repeat: no-repeat;
+    backface-visibility: hidden;
+    opacity: 0.8;
+
+    &--primary {
+      top: -120px;
+      left: 50px;
+
+      width: 819px;
+      height: 1621px;
+
+      background-image: url(https://res.cloudinary.com/mihael/image/upload/v1548409393/codepen/cloud-2.png);
     }
+    &--secondary {
+      top: 0;
+      right: 50px;
+
+      width: 300px;
+      height: 500px;
+
+      background-size: 300px auto;
+      background-image: url(https://res.cloudinary.com/mihael/image/upload/v1548409392/codepen/cloud-1.png);
+    }
+  }
+  &__title {
+    position: absolute;
+
+    top: 40vh;
+    left: 15vw;
+    right: 24vw;
+    z-index: 1;
+    opacity: 0;
+    font-size: 200px;
+    line-height: calc(6px * 12);
+    color: white;
+    font-family: "Eczar", sans-serif;
+    font-weight: 200;
+    text-align: center;
+  }
+
+  &__subtitle {
+    position: absolute;
+    top: 55vh;
+    left: 31vw;
+    right: 24vw;
+    width: 500px;
+    color: white;
+    font-family: "Gentium Basic", serif;
+    font-size: 24px;
+    line-height: 32px;
+    text-align: center;
   }
 }
-#project-details {
-  display: none;
-  padding: 2rem;
-  background-color: #f9f9f9;
-  border-radius: 10px;
-  box-shadow: 10px 5px 15px 5px rgba(0, 0, 0, 0.5);
+.animation {
+  &--floating {
+    animation-name: floating;
+    animation-duration: 200000ms;
+    animation-iteration-count: infinite;
+  }
+  &--title-in {
+    animation: title-in 800ms forwards ease-in-out 750ms;
+  }
+  &--from-top {
+    animation: from-top 350ms forwards cubic-bezier(0.65, 0.05, 0.36, 1);
+  }
+  &--from-bottom {
+    animation: from-bottom 350ms forwards cubic-bezier(0.65, 0.05, 0.36, 1);
+  }
+}
 
-  .container {
-    max-width: 800px;
+@keyframes floating {
+  0% {
+    transform: translateY(0%);
+  }
+  50% {
+    transform: translateY(50%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+
+@keyframes title-in {
+  0% {
+    visibility: hidden;
+    opacity: 0;
+    transform: translateY(-25%);
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+  }
+}
+@keyframes from-top {
+  0% {
+    visibility: hidden;
+    opacity: 0;
+    transform: translateY(-30%);
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+  }
+}
+@keyframes from-bottom {
+  0% {
+    visibility: hidden;
+    opacity: 0;
+    transform: translateY(15%);
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+  }
+}
+
+.projects {
+  background: linear-gradient(
+    5deg,
+    rgba(135, 172, 126, 1) 4%,
+    rgba(115, 84, 57, 1) 84%
+  );
+  padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin: 0 auto;
+  cursor: pointer;
+  top: 0;
+}
+
+.project-card {
+  background-color: #f2d5c4;
+  text-decoration: none;
+  border-radius: 50px;
+  padding: 30px;
+  color: black;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  width: 30%;
+  height: 400px;
+  box-sizing: border-box;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
+  margin-bottom: 100px;
+
+  &:hover {
+    background-color: #91a687;
+    transform: scale(1.25);
+  }
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
+
+  .project-image {
     margin: 0 auto;
-    text-align: center;
+    border-radius: 30px;
+    width: 60%;
+    height: 250px;
+    background-image: url(../images/team1.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .project-image2 {
+    margin: 0 auto;
+    border-radius: 30px;
+    width: 60%;
+    height: 250px;
+    background-image: url(../images/team2.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .project-image3 {
+    margin: 0 auto;
+    border-radius: 30px;
+    width: 60%;
+    height: 250px;
+    background-image: url(../images/team3.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .project-image4 {
+    margin: 0 auto;
+    border-radius: 30px;
+    width: 60%;
+    height: 250px;
+    background-image: url(../images/team4.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .project-image5 {
+    margin: 0 auto;
+    border-radius: 30px;
+    width: 60%;
+    height: 250px;
+    background-image: url(../images/team5.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .project-image6 {
+    margin: 0 auto;
+    border-radius: 30px;
+    width: 60%;
+    height: 250px;
+    background-image: url(../images/team6.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .project-image7 {
+    margin: 0 auto;
+    border-radius: 30px;
+    width: 60%;
+    height: 250px;
+    background-image: url(../images/team7.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .project-image8 {
+    margin: 0 auto;
+    border-radius: 30px;
+    width: 60%;
+    height: 250px;
+    background-image: url(../images/team8.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
-    h2#project-title {
-      font-size: 2rem;
-      margin-bottom: 1.5rem;
-      color: #333;
+  .project-details {
+    h3 {
+      margin: 0 auto;
+      font-size: 1.5rem;
+      margin-top: 10px;
     }
 
-    .project-details-content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 1.5rem;
-
-      .project-image {
-        width: 100%;
-        max-width: 400px;
-        height: auto;
-        border-radius: 10px;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
-      }
-
-      p {
-        margin: 0;
-        font-size: 1rem;
-        color: #555;
-
-        &#project-members,
-        &#project-type {
-          font-weight: bold;
-          color: #444;
-        }
-      }
-    }
-
-    #project-behance {
-      margin-top: 1.5rem;
-
-      button {
-        background-color: #9c80a1;
-        border: none;
-        border-radius: 5px;
-        padding: 0.75rem 1.5rem;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-
-        &:hover {
-          background-color: #c59ac9;
-        }
-
-        a {
-          color: #fff;
-          text-decoration: none;
-          font-size: 1rem;
-          font-weight: bold;
-
-          &:hover {
-            text-decoration: underline;
-          }
-        }
-      }
-    }
-
-    button#go-back {
-      margin-top: 2rem;
-      background-color: #0077b6;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      padding: 0.75rem 1.5rem;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-
-      &:hover {
-        background-color: #d62839;
-      }
+    p {
+      margin: 0 auto;
+      width: 100%;
+      text-align: center;
     }
   }
 }
